<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Nanidroid</string>


  <string name="dl_complete">Download Completed</string>
  <string name="list_ghost_btn_text">List Ghosts</string>
  <string name="more_ghosts_btn_text">More Ghost</string>
  <string name="list_ghost_dlg_title">List of Installed Ghosts</string>
  <string name="no_readme_dlg_title">Switch to Ghost?</string>
  <string name="no_readme_text">The ghost %1$s has no readme file to show.  Do you want to switch to it?</string>
  <string name="switch_to_ghost_btn_text">Switch to Ghost</string>
  <string name="new_ghost_installed_title">Installed New Ghost</string>
  <string name="close_btn_text">Close</string>
  <string name="more_g_title">To Get More Ghosts</string>

  <string name="ghosts_btn_text">Ghosts</string>
  <string name="more_btn_text">More</string>
  <string name="readme_menu_text">Readme</string>
  <string name="current_ghost_no_readme_title">No Readme</string>
  <string name="current_ghost_no_readme_message">The current ghost has no readme file to show.</string>
  
  <string name="user_input_dlg_title">Input</string>
  <string name="user_input_required">Input is required</string>
  <string name="dialogue_choose_action">Choose…</string>
  <string name="user_sel_dlg_title">Please Select One</string>
  <string name="err_title">Error</string>
  <string name="err_no_sdcard">No SD Card! Aborting</string>
  
  <string name="prog_startup">Starting Nanidroid</string>
  <string name="load_g">Loading Ghost\n%1$s&#8230;</string>

<!--  <string name=""></string> -->
  <string name="unsupported_shiori">\\0\\s0Sorry, this Ghost is using a SHIORI that is not yet supported by Nanidroid!\\e</string>
  <string name="unsupported_shiori_ongchanging">\\0\\s0Changing Ghost to %1$s\\e</string>
  <string name="unsupported_shiori_onclose">\\0\\s0Thank you for using Nanidroid!\\e</string>
  <string name="err_no_ghost_available">No ghost is currently available. Install a ghost archive to continue.</string>
  <string name="toggle_stage_chrome_action">Show or hide controls</string>
  <string name="sakura_character_description">Sakura character</string>
  <string name="kero_character_description">Kero character</string>
  <string name="stage_tiny_window_message">This window is too small for Nanidroid. Make it a little bigger 💦</string>
  <string name="stage_surface_activate_action">Operate %1$s</string>
  <string name="stage_collision_activate_action">Operate “%2$s” on %1$s</string>
  <string name="stage_collision_activate_repeated_action">Operate “%2$s” on %1$s (%3$d)</string>
  <string name="stage_collision_unnamed_region">unnamed region</string>
  <string name="stage_collision_disambiguated_identifier">%1$s [%2$d]</string>
  <string name="nar_import_from_document">Install from document</string>
  <string name="nar_import_copying">Copying selected archive…</string>
  <string name="nar_import_installing">Installing selected ghost…</string>
  <string name="nar_import_cleaning">Cleaning private staging…</string>
  <string name="nar_import_refreshing">Refreshing installed ghosts…</string>
  <string name="nar_import_installed_title">Ghost installed</string>
  <string name="nar_import_installed_message">The ghost was installed and is now available in the ghost list.</string>
  <string name="nar_import_failed_title">Couldn’t install ghost</string>
  <string name="nar_import_interrupted_title">Import interrupted</string>
  <string name="nar_import_interrupted_message">Previous import was interrupted. Installed ghosts are preserved; if the new ghost isn’t listed, select the archive again.</string>
  <string name="nar_import_recovery_title">Import cleanup needs attention</string>
  <string name="nar_import_retry_cleanup">Retry cleanup</string>
  <string name="nar_import_select_another">Select another</string>
  <string name="nar_import_recovery_installed_message">The ghost was installed and is preserved. Only cleanup will be retried.</string>
  <string name="retry_action">Retry</string>
  <string name="bundled_install_recovery_title">Built-in ghost installation needs attention</string>
  <string name="startup_recovery_title">No ghost could be started</string>
</resources>
